<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeatherX</string>
    <string name="empty">"   "</string>
    <string name="not_available">"Not available"</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="slash">/</string>
    <string name="real_feel">Real Feel</string>
    <string name="humidity">Humidity</string>
    <string name="uv_index">UV Index</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="next_7_days">Next 7 days</string>
    <string name="next_24_hours">Next 24 hours</string>
    <string name="north">North</string>
    <string name="north_northeast">North Northeast</string>
    <string name="northeast">Northeast</string>
    <string name="east_northeast">East Northeast</string>
    <string name="east">East</string>
    <string name="east_southeast">East Southeast</string>
    <string name="southeast">Southeast</string>
    <string name="south_southeast">South Southeast</string>
    <string name="south">South</string>
    <string name="south_southwest">South Southwest</string>
    <string name="southwest">Southwest</string>
    <string name="west_southwest">West Southwest</string>
    <string name="west">West</string>
    <string name="west_northwest">West Northwest</string>
    <string name="northwest">Northwest</string>
    <string name="north_northwest">North Northwest</string>
    <string name="precipitation">Precipitation</string>
    <string name="weather_service">Weather Service</string>
    <string name="animated_icons">Animated icons</string>
    <string name="open_weather">Open Weather</string>
    <string name="openweathermap_url">https://openweathermap.org</string>
    <string name="lottiefiles_jochang_url">https://lottiefiles.com/user/26177</string>
    <string name="designed_by_jochang">Designed by jochang from LottieFiles</string>
    <string name="uigradients">uiGradients</string>
    <string name="uigradients_url">https://uigradients.com</string>
    <string name="about">About</string>
    <string name="add_place">Add place</string>
    <string name="comming_soon">Coming soon</string>
    <string name="material_design_icons_url">https://materialdesignicons.com/</string>
    <string name="material_design_icons">Material Design Icons</string>
    <string name="icons">Icons</string>
    <string name="dark_mode">Dark mode</string>
    <string name="fonts">Fonts</string>
    <string name="quicksand">Quicksand</string>
    <string name="quicksand_url">https://fonts.google.com/specimen/Quicksand</string>
    <string name="colors">Colors</string>
    <string name="try_again">Try Again</string>
    <string name="internet_not_detected">An Internet connection is not detected</string>
    <string name="libraries_and_tools">Libraries and Tools</string>
    <string name="android_jetpack">Android Jetpack</string>
    <string name="android_jetpack_url">https://developer.android.com/jetpack</string>
    <string name="android_kotlin">Android Kotlin</string>
    <string name="android_kotlin_url">https://developer.android.com/kotlin</string>
    <string name="retrofit">Retrofit</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>
    <string name="moshi">Moshi</string>
    <string name="moshi_url">https://github.com/square/moshi</string>
    <string name="dexter">Dexter</string>
    <string name="dexter_url">https://github.com/Karumi/Dexter</string>
    <string name="sdp_url">https://github.com/intuit/sdp</string>
    <string name="sdp">SDP</string>
    <string name="ssp_url">https://github.com/intuit/ssp</string>
    <string name="ssp">SSP</string>
    <string name="shape_of_view_url">https://github.com/florent37/ShapeOfView</string>
    <string name="shape_of_view">ShapeOfView</string>
    <string name="lottie_for_android">Lottie for Android</string>
    <string name="lottie_for_android_url">https://github.com/airbnb/lottie-android</string>
    <string name="toasty">Toasty</string>
    <string name="toasty_url">https://github.com/GrenderG/Toasty</string>
    <string name="timber">Timber</string>
    <string name="timber_url">https://github.com/JakeWharton/timber</string>
    <string name="metric_system">Metric System</string>
    <string name="about_description_1">Just a simple app for fun, but you can use it to get weather information xD</string>
    <string name="about_description_2">You can find us in GitHub (tap this text) and help us improve. All the tools and libraries use in this project are free, not all the icons shown in this section are provided from the corresponding project, in some we just take a picture and create an icon to use here :)</string>
    <string name="project_github">https://github.com/CamiloDelReal/project-weather-x</string>
    <string name="location_unknown_error">Unknown error from Location provider</string>
    <string name="location_provider_error">Location provider couldn\'t get the last known location</string>
    <string name="gps_disabled">GPS Service disabled or is being obtained now. Please, enable your device\'s GPS Service at least once to get your location, you won\'t need it again unless you want a real-time monitoring or you change location</string>
    <string name="error_retrieving_place_from_db">Error retrieving the place from database</string>
    <string name="android_google_play_service_location">Google Play Service for Location</string>
    <string name="android_google_play_service_location_url">https://developer.android.com/training/location</string>
</resources>