<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.fragments.AboutFragment">

    <data>

        <variable
            name="version"
            type="java.lang.String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:elevation="2dp"
            android:tint="?attr/colorOnSurface"
            android:fitsSystemWindows="true"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="?attr/actionBarSize"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingBottom="?attr/actionBarSize">

                <ImageView
                    android:layout_width="@dimen/_64sdp"
                    android:layout_height="@dimen/_64sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_launcher_rounded_corners" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_12sdp" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="?attr/colorOnSurface" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@{version}"
                    android:textColor="?attr/colorOnSurface"
                    tools:text="0.1.0" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_24sdp" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_service" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.1"
                    android:background="?attr/colorOnSurface" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_6sdp" />

                <org.xapps.apps.weatherx.views.custom.AboutReference
                    android:id="@+id/btnLinkOpenWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_openweather"
                    app:ar_text="@string/open_weather"
                    app:ar_link="@string/openweathermap_url" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_18sdp" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.1"
                    android:background="?attr/colorOnSurface" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_6sdp" />

                <org.xapps.apps.weatherx.views.custom.AboutReference
                    android:id="@+id/btnLinkMaterialDesignIcons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_googlematerialdesign"
                    app:ar_text="@string/material_design_icons"
                    app:ar_link="@string/material_design_icons_url" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_18sdp" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animated_icons" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.1"
                    android:background="?attr/colorOnSurface" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_6sdp" />

                <org.xapps.apps.weatherx.views.custom.AboutReference
                    android:id="@+id/btnLinkLottieFiles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_lottiefiles"
                    app:ar_text="@string/designed_by_jochang"
                    app:ar_link="@string/lottiefiles_jochang_url" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_18sdp" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gradients" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.1"
                    android:background="?attr/colorOnSurface" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_6sdp" />

                <org.xapps.apps.weatherx.views.custom.AboutReference
                    android:id="@+id/btnLinkUiGradients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_uigradients"
                    app:ar_text="@string/inspiration_from_uigradients"
                    app:ar_link="@string/uigradients_url" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>