<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/ic_bg_card"
            android:orientation="vertical"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAddPlace"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_centerInParent="true"
                    android:enabled="false"
                    android:gravity="start|center_vertical"
                    android:paddingHorizontal="@dimen/_24sdp"
                    android:text="@string/add_place"
                    android:textAllCaps="false"
                    app:cornerRadius="0dp" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:alpha="0.5"
                    android:text="@string/comming_soon" />

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAbout"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="@dimen/_24sdp"
                android:text="@string/about"
                android:textAllCaps="false"
                app:cornerRadius="0dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>